src/regression/parse_pool/progtest2.sfp.out

sfc in program: parse_pool/progtest2.sfp
syntax error at 2 at line:
configuration and { blink nothing } 
              ^
