src/regression/parse_pool/progtest2.sfp
# Testing erroneous program definition (invalid identifier)
configuration and { blink nothing } 
start hello

